8200230: [Graal] Compilations should not be enqueued before Graal is initialized

Split compiler initialization into two phases to avoid compilations being enqueued before Graal is initialized.

Reviewed-by: kvn, dnsimon